SERVER-23829 shell launcher logs name stored on ProgramRunner

These names used to be stored in the registry in a map, but the
process could have been removed from the map before output is done
being read.